projects/elements/src/notification/notification.css
:host {
  --nve-sys-layer-popover-offset: var(--nve-ref-space-xl);
  --border-radius: var(--nve-ref-border-radius-md);
  --status-color: var(--nve-sys-status-neutral-background);
  --background: var(--nve-sys-layer-popover-background);
  --color: var(--nve-sys-layer-popover-color);
  --padding: var(--nve-ref-size-500) var(--nve-ref-size-900);
  --box-shadow: var(--nve-ref-shadow-400);
  --min-width: 320px;
  --width: fit-content;
  width: var(--width);
  position: inherit;
}

:host([position]) {
  position: fixed;
}

.popover {
  box-shadow: var(--box-shadow);
  padding: var(--padding);
  border-radius: var(--border-radius);
  background: var(--background);
  color: var(--color);
  display: flex;
  flex-direction: column;
  gap: var(--nve-ref-space-sm);
  border: 0;
  border-left: 6px solid var(--status-color);
  min-width: var(--min-width);
  position: relative;
  line-height: 0.8em;
}

.popover:has(nve-icon-button) {
  padding-right: var(--nve-ref-size-1000);
}

nve-icon-button {
  --color: inherit;
  position: absolute;
  top: 6px;
  right: 6px;
}

[part='status-icon'] {
  position: absolute;
  top: 16px;
  left: 8px;
  --color: var(--status-color);
  --width: 20px;
  --height: 20px;
}

::slotted([nve-text]) {
  color: inherit !important;
}

:host([status='accent']) {
  --status-color: var(--nve-sys-accent-secondary-background);
}

:host([status='success']) {
  --status-color: var(--nve-sys-status-success-background);
}

:host([status='warning']) {
  --status-color: var(--nve-sys-status-warning-background);
}

:host([status='danger']) {
  --status-color: var(--nve-sys-status-danger-background);
}

